= 0.10.8

* Updating CE for Rails 2.2.2 compatibility
* Removed Globalite in favor of Rails' native I18n API. Ce localization should work without modification
* Updated attachment_fu plugin 
* renamed dozens of files to use Rails 2.0 conventions (ie. .html.haml)
* updated truncate calls to use new options hash format

= 0.10.7

* Updating CE to be compatible with Rails 2.1.2
* Lots of il8n refactoring, mainly using symbol tokens instead of string for localization in views. 