@@ -5,6 +5,7 @@
 * Updated attachment_fu plugin 
 * renamed dozens of files to use Rails 2.0 conventions (ie. .html.haml)
 * updated truncate calls to use new options hash format
+* fixing attachment_fu hacks to be compatible with new att_fu
 
 = 0.10.7
 
